# influece_driven_curriculum_sorter

./: .gitignore  pyproject.toml
docs/: influence_curriculum_paper_reference.md  results.md  tiered_4bands_dataset_pipeline.md  tiered_4bands_summary.md
docs/spec/: influence_curriculum_spec.md
docs/superpowers/plans/: 2026-06-17-influence-curriculum.md  2026-06-19-curriculum-training-notebook.md
docs/superpowers/specs/: 2026-06-17-influence-curriculum-design.md  2026-06-19-curriculum-training-notebook-design.md  2026-06-19-pass2-jvp-fix-design.md
notebooks/: 01_data_inspect.ipynb  02_influence_debug.ipynb  03_curriculum_check.ipynb  04_colab_pipeline.ipynb  05_curriculum_training.ipynb  06_sequential_bands_curriculum.ipynb  07_train.ipynb  08_eval.ipynb
src/influence_curriculum/: __init__.py  curriculum.py  data.py  score.py  sort.py  train.py
tests/: test_correctness.py  test_jvp_attn_impl.py  test_train_curriculum.py  test_train_word_aware.py
