[project]
name = "influence-curriculum"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "transformers>=4.40",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = ["jupyterlab", "pytest", "ipykernel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/influence_curriculum"]
